<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">STweaks</string>
    <string name="menu_about">About STweaks</string>
    <string name="title_activity_main" translatable="false">STweaks</string>
    <string name="bottom_accept">Apply</string>
    <string name="bottom_decline">Discard</string>
    <string name="startmenu_initial" translatable="false" />
    <string name="startmenu_nokernelsupport">Sorry, no kernel support!</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="flash_kernel">Flash Kernel</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="reset_settings">Reset settings to default</string>
    <string name="developer_info" tools:ignore="TypographyDashes">Developed by Gokhan Moral\nUpdated by B--B</string>
    <string name="startmenu_no_root">No root access, or timeout!</string>
    <string name="kernel_thread">Kernel Thread</string>
    <string name="donation">Donation</string>
    <string name="kernel_bug">Bug report for Kernel</string>
    <string name="app_bug">Bug report for App</string>
    <string name="logging">Collecting logs for 30 seconds, please wait until STweaks will close</string>
    <string name="wait">Loading profile, wait until STweaks exit and restart by itself</string>
    <string name="log_done">All Data collected and ready at /sdcard/alucard-debug.zip</string>
    <string name="select_profile">STweaks Profiles</string>
    <string name="profile_check">Check Profile</string>
    <string name="extreme_performance">Extreme Performance Profile</string>
    <string name="performance">Performance Profile</string>
    <string name="default_profile">Default Profile</string>
    <string name="battery">Battery</string>
    <string name="extreme_battery">Extreme Battery Profile</string>
    <string name="disclaimer">We\'re not responsible for bricked devices, dead SD cards, thermonuclear war, or you getting fired because the alarm app failed. Please do some research if you have any concerns about features included in this application before changing any value! YOU are choosing to make these modifications, and if you point the finger at us for messing up your device, we will laugh at you.\nAlu Team,Testers and Contributors\nalucard24, AntaresOne, smeroni68, Jimsilver73, franzyroy, Angelcalibur, -+BB+-</string>
    <string name="reset_settings_prompt">All settings will be reset. You will have to relaunch the application.</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="kernel">"\n Kernel Version: "</string>
    <string name="back">Back</string>
    <string name="romversion">"\n ROM Version: "</string>
    <string name="romapi">"\n ROM API Level: "</string>
    <string name="romcode">"\n ROM Codename: "</string>
    <string name="romrel">"\n ROM Release Version: "</string>
    <string name="hwserial">"\n Hardware Serial: "</string>
    <string name="radio">"\n Baseband Version: "</string>
    <string name="device">"\n Device: "</string>
    <string name="model">"\n Model (and Product): "</string>
    <string name="appver">App Version: </string>
    <string name="appvernf">App Version: Not found!</string>
    <string name="choose_profile">Choose STweaks Profile</string>
    <string name="loading">Loading! Please wait…</string>
    <string name="yourprofile">"Your Profile is: "</string>
    <string name="settings">"Settings"</string>
    <string name="pref_launcher_icon">"Launcher Icon"</string>
    <string name="pref_launcher_icon_description">"Choose the icon to show in the launcher"</string>
    <string name="pref_launcher_icon_default" translatable="false">material</string>
    <string name="change_icon">"Changing STweaks icon, just wait a few seconds"</string>
    <string name="no_icon">"Removing STweaks icon, just wait a few seconds"</string>
    <string name="do_not_show">"Do not show again"</string>
    <string name="icon_prompt">"STweaks icon now will disappear from your launcher. If STweaks has not been integrated in your ROM you will have to manually uninstall it, reboot your device and reinstall STweaks again!"</string>
    <string name="contributors">"Alu Team,Testers and Contributors:\nalucard24, AntaresOne, smeroni68, Jimsilver73, franzyroy, Angelcalibur, -+BB+-"</string>
    <string name="pref_animation_in">"Animation In"</string>
    <string name="pref_animation_in_description">"Animation used when Accept/Discard changes buttons become visible"</string>
    <string name="pref_animation_in_default" translatable="false">"fadescalein"</string>
    <string name="pref_animation_out_accept">"Animation Out Accept Button"</string>
    <string name="pref_animation_out_description_accept">"Animation used when user press Accept Button"</string>
    <string name="pref_animation_out_default_accept" translatable="false">"fadescaleout"</string>
    <string name="pref_animation_out_description_decline">"Animation used when user press Discard Button"</string>
    <string name="pref_animation_out_decline">"Animation Out Decline Button"</string>
    <string name="pref_animation_out_default_decline" translatable="false">"fadescaleout"</string>
    <string name="pref_theme">"Theme Chooser"</string>
    <string name="pref_description_theme">"Choose your favourite theme"</string>
    <string name="pref_theme_default" translatable="false">"light"</string>
    <string name="theme_change">"STweaks will now restart with the selected theme"</string>
    <string name="pref_changelog">"Full changelog on my GitHub"</string>
    <string name="log_widget">"STweaks log widget"</string>
    <string name="log_button">"Save Log"</string>

</resources>
