<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        	  xmlns:tools="http://schemas.android.com/tools"
    		  android:id="@+id/MainLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

        <TextView
        android:id="@+id/textViewStart"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startmenu_initial"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center" />
                      	
	<LinearLayout
        style="?acceptDeclineLayout"
	    android:id="@+id/AcceptDeclineLayout"
        android:elevation="@dimen/size_large"
        tools:ignore="UnusedAttribute">

		<Button
            style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/AcceptButton"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/size_small"
            android:textSize="18sp"
            android:textStyle="bold"
	        android:text="@string/bottom_accept"
	        />

		<Button
            style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/DeclineButton"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
            android:layout_margin="@dimen/size_small"
            android:textSize="18sp"
            android:textStyle="bold"
	        android:text="@string/bottom_decline"
	        />
	</LinearLayout>
	
	<android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="?viewpagerLayout"
        android:id="@+id/pager"
    	tools:context=".MainActivity"/>
       
</RelativeLayout>

<!-- 
<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" />
-->